[package]
name = "context-server"
version = "0.8.1"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1.83"
jsonrpc-types = { git = "https://github.com/fdionisi/jsonrpc-types", version = "0.1.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = { version = "0.1" }
