[package]
name = "context-server"
version = "0.8.3"
edition = "2021"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
jsonrpc-types = { git = "https://github.com/fdionisi/jsonrpc-types", version = "0.1" }
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
tracing = { version = "0.1" }

[workspace]
resolver = "2"
members = ["crates/context-server-utils"]

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
serde_json = "1"
