[package]
name = "context-server"
version = "0.9.1"
edition = "2021"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
futures = "0.3"
jsonrpc-types = { git = "https://github.com/fdionisi/jsonrpc-types", version = "0.2" }
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
tracing = { version = "0.1" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[workspace]
resolver = "2"
members = ["crates/context-server-utils"]

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
serde_json = "1"
